apps/prod/lute/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lute
  namespace: lute
  labels:
    app: lute
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lute
  template:
    metadata:
      labels:
        app: lute
    spec:
      containers:
        - name: lute
          image: jzohrab/lute3:latest
          ports:
            - containerPort: 5001
          volumeMounts:
            - name: lute-data
              mountPath: /lute_data
            - name: lute-backup
              mountPath: /lute_backup
      volumes:
        - name: lute-data
          persistentVolumeClaim:
            claimName: lute-data
        - name: lute-backup
          persistentVolumeClaim:
            claimName: lute-backup
